--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,6 +34,10 @@
 		</article>
 -->
 			<article>
+				<p><b>02.jul.24 - 4pm</b> this is as good as life gets <button onclick="showPic('!g/240702-kaiba-room.png', 'picture of my room with kaiba playing in the background' , 'watching kaiba in my cozy room')">240702-kaiba-room.png</button></p>
+			</article>
+
+			<article>
 				<p><b>25.jun.24 - 11pm</b> washing machines that lock their lids should not exist. also i kinda have my halloween outfit ready... he he he</p>
 			</article>
 
