sites n git ignore

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -189,6 +189,7 @@
 			<a title="humantooth" href="https://humantooth.neocities.org" target="_blank"><img src="!g/humantooth.png" alt="humantooth"></a>
 			<a title="raum" href="https://raum.neocities.org/" target="_blank"><img src="!g/raum.gif" alt="raum"></a>
 			<a title="feelingmachine" href="https://feelingmachine.moe/" target="_blank"><img src="!g/feelingmachine.png" alt="feelingmachine"></a>
+			<a title="i can read this site for hours and hours. so many interesting bits in here" href="https://incessantpain.neocities.org/" target="_blank"><img src="!g/incessantpain.gif"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
@@ -242,7 +243,6 @@
 			<a href="https://radiowavegirl.neocities.org/" target="_blank"><img src="!g/radiowavegirl.png"></a>
 			<a href="https://aegi.neocities.org/" target="_blank"><img src="!g/aegi.gif"></a>
 			<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="!g/gothiclolita.jpg"></a>
-			<a title="i can read this site for hours and hours. so many interesting bits in here" href="https://incessantpain.neocities.org/" target="_blank"><img src="!g/incessantpain.gif"></a>
 			<a title="very cute personal site. seals :3" href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
 			<a href="https://rachychel.neocities.org/" target="_blank"><img src="!g/rachychel.gif"></a>
 			<a href="https://22yk01.neocities.org" target="_blank"><img src="!g/22yk01.gif" alt="22yk01"></a>
@@ -296,6 +296,7 @@
 			<a href="https://14-4ml.neocities.org/" target="_blank"><img src="!g/14-4ml.gif" alt="14-4ml"></a>
 			<a href="https://puppyluv.neocities.org/" target="_blank"><img src="!g/puppyluv.png" alt="puppyluv"></a>
 			<a href="https://xixxii.neocities.org/" target="_blank"><img src="!g/xixxii.gif" alt="xixxii"></a>
+			<a href="https://mooncandy.neocities.org/" target="_blank"><img src="!g/mooncandy.gif" alt="mooncandy"></a>
 		</div>
 
 		<div class="banner">
@@ -339,7 +340,8 @@
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
 			<a title="joisu - their pixels are toybox are so cute :3" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif" alt="twicethepixels"></a>
 			<a title="catstuff" href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catstuff-xmission.gif"></a>
-			<a href="https://" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
+			<a href="https://pomelo.lol/pixel/home" target="_blank"><img src="!g/pomelo-pixel.gif" alt="pomelo's pixel site"></a>
+			<a title="F2U icons n pixels" href="http://www.nagai.net/icon-kan/index.html" target="_blank"><img src="!g/nagai-net.gif" alt="nagai"></a>
 		</div>
 		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
 		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
