--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -122,7 +122,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
-			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog <img src="/!g/pix/new1.gif"></a>
+			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog </a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
@@ -199,6 +199,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>02.jul.24: added entries to <a href="/photobook">photobook</a></li>
 			<li>25.jun.24: journal log: <a href="/journal">last day</a></li>
 			<li>21.jun.24: updated <a href="/scrapbook/2024/index.html#jun">june</a> scrapbook + added <i>kaiba</i> to <a href="/tv">TV</a> log</li>
 			<li>16.jun.24: journal log: <a href="/journal">guilt</a></li>
