style savvy log

--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -42,6 +42,8 @@
 		<div class="info"><b>genre/type: </b> fashion, simulator</div>
 
 		<h3>logs</h3>
+		<p><span class="date">03.jul.24</span> 🏳️‍🌈 ? <br> <img src="240703-gay.jpg" width="100%"></p>
+		<hr>
 		<p><span class="date">05.jun.24</span> i hacked my 3DS a couple of days ago and since then, my life has changed. i go a little bit into detail about this on a <a href="/journal/2024/06.html#4" target="_parent">journal log</a> but i've been meaning to play the older style savvy games ever since i started playing <a href="/vgs/fashion-dreamer/index.html">fashion dreamer</a> and oh boy!</p>
 		<center><img src="240605.jpg" style="max-width: 60%;"></center>
 		<p>i just got out of the "tutorial" part of the game and got made the manager of the boutique, but i am having soooo much fun already! <img src="/!g/pix/gaycat.gif" style="max-width:90%;"></p>
