--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -20,7 +20,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<link class="theme" href="/!f/homepage-v3/flower.css" rel="stylesheet" type="text/css">
 	<!--	JS for webrings-->
-	<link href="https://adilene.net/webring/webring.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
 	<!--	tooltip shit-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -302,9 +301,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<!--  vocaloid webring -->
 			<div id="vocaring">
-				<script type="text/javascript" src="https://adilene.net/webring/webring-variables.js"></script>
-				<script type="text/javascript" src="https://adilene.net/webring/webring-widget.js"></script>
-				<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
+				<script src="https://webring.adilene.net/webring.js"></script>
 			</div>
 
 			<!-- mob psycho 100 / mp100 webring -->
