--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -1,56 +1,199 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-
-	<!--  
-coded with love by des
- -->
-
 	<meta charset="UTF-8">
-	<title>my art</title>
+	<title>art</title>
 	<meta name="description" content="doqmeat's art">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/catdraw.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="body.css" rel="stylesheet" type="text/css" media="all">
-	<!-- tooltip shit -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="/!f/tooltip-jquary.js"></script>
-	<script src="/!f/tooltip.js"></script>
-	<!--  end of tooltip shit -->
+	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-	<h1>arts &amp; crafts</h1>
-	<p>this happens once every year or something but i do a little drawing and other stuff. <small>one day i will have a layout for this page.</small></p>
 
-	<h2>posts</h2>
-	<p><a href="post/depression-cherry-booklet.html">depression cherry custom booklet</a></p>
+	<!-- 
+	
+	<button class="container"><img src="thumb/"></button>
+		-->
+	<main>
+		<header>
+			<h1>arts &amp; craft</h1>
+			<p>i do a little bit of art on rare occasions.</p>
+		</header>
 
-	<h2>arts</h2>
-	<img src="!g/drawings/240520-casio.jpg" class="full">
-	<img src="!g/drawings/halo2.jpg" class="full">
-	<img src="!g/drawings/halotransp.png" class="half">
-	<img src="!g/drawings/sepiarecord.jpg" class="half">
-	<img src="!g/drawings/oyasumi.jpg" class="half">
-	<img src="!g/drawings/thelittleprincejrn.jpg" class="full">
-	<img src="!g/drawings/pahwah.png" class="half">
-	<img src="!g/drawings/panocto2.png" class="half">
-	<img src="!g/drawings/pan4.jpg" class="half"> <img src="!g/drawings/fastfoodworkerhellokitty1.jpg" class="half">
-	<img src="!g/drawings/hyperlightdrifter6thanni.jpg" class="full">
+		<div id="drawings">
+			<h2>drawings</h2>
 
-	<h2>crafts</h2>
-	<img src="!g/collage/loona.jpg" class="full">
-	<img src="!g/collage/lucy.jpg" class="full">
-	<img src="!g/collage/mizu.jpg" class="half">
-	<img src="!g/collage/olivia.jpg" class="half">
-	<img src="!g/collage/siinamota.jpg" class="half">
-	<img src="!g/collage/yukika.jpg" class="half">
+			<button onclick="showWin('casio')" class="container"><img src="thumb/240520-casio.png"></button>
+			<div id="casio" class="window">
+				<img src="!g/drawings/240520-casio.jpg" width="100%">
+				<p>??.may.24 - casio from hit visual novel: if found...</p>
+				<p>made this while bored af studying for my precalculus final.</p>
+			</div>
 
-	<footer>
-		<a href="#">top</a> / <a href="/">homepage</a> / <a href="/sitemap">sitemap</a>
-	</footer>
+			<button onclick="showWin('halo2')" class="container"><img src="thumb/221201-halo2.png"></button>
+			<div id="halo2" class="window">
+				<img src="!g/drawings/halo2.jpg" width="100%">
+				<p>08.dec.22 - based off siinamota's halo PV.</p>
+				<iframe width="90%" height="332" src="https://www.youtube.com/embed/WchOJBb--PU" title="【PowapowaP ft. Hatsune Miku】Halo【English subtitles】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<p>this is the first of three pieces i want to make based off this song's pv. its one of my favorite songs by siinamota because of how haunting and melancholic it sounds.i wanted to create something that would show how i view what's happening to the protagonist while they are saying these things since the video and song are pretty vague. i also just wanted to caption the feeling of the PV and song. it is one of my favorite songs from siinamota.</p>
+			</div>
+
+			<button onclick="showWin('orange')" class="container"><img src="thumb/sketch-orange.png"></button>
+			<div id="orange" class="window">
+				<img src="!g/drawings/sketch-orange.jpg" width="100%">
+				<p>??.??.23 - sketch of a member from orange caramel. i don't know her name, so sorry. the picture was just very charming.</p>
+			</div>
+
+			<button onclick="showWin('halo-2')" class="container"><img src="thumb/halo-2.png"></button>
+			<div id="halo-2" class="window">
+				<img src="!g/drawings/halo-2.jpg" width="100%">
+				<p>and another one. based off siinamota's halo</p>
+			</div>
+
+			<button onclick="showWin('junho')" class="container"><img src="thumb/junho.png"></button>
+			<div id="junho" class="window">
+				<img src="!g/drawings/junho.jpg" width="100%">
+				<p>so there's this kpop idol called JUNHO from kpop boy group DRIPPIN...</p>
+			</div>
+
+			<button onclick="showWin('hello')" class="container"><img src="thumb/fast-food-worker-hello.png"></button>
+			<div id="hello" class="window">
+				<img src="!g/drawings/fastfoodworkerhellokitty1.jpg" width="100%">
+				<p>22.jul.23 - a friend of mine found a mcdonald's fast food worker hello kitty plushie and i found it sooooooooo adorable. i had to draw her bringing me my food. and btw <a href="https://www.businessinsider.com/mcdonalds-donating-thousands-meals-idf-israeli-citizens-hamas-attacks-2023" target="_blank" class="outlink">boycott mcdonalds</a> for palestine. </p>
+			</div>
+
+			<button onclick="showWin('yeah')" class="container"><img src="thumb/yeah.png"></button>
+			<div id="yeah" class="window">
+				<img src="!g/drawings/yeah.jpg" width="100%">
+				<p>used a pic from korean photographer mugung for this one. just messing around with CSP.</p>
+			</div>
+
+			<button onclick="showWin('minecraft')" class="container"><img src="thumb/minecraft.png"></button>
+			<div id="minecraft" class="window">
+				<img src="!g/drawings/minecraft.png" width="100%">
+				<p>doing fuck all doodling minecraft stuff and those weird mushroom ppl from dark souls. idk i just find them really cute. i love mushrooms.</p>
+			</div>
+
+			<button onclick="showWin('power')" class="container"><img src="thumb/pahwah.png"></button>
+			<div id="power" class="window">
+				<img src="!g/drawings/pahwah.png" width="100%">
+				<p>some doodles of power and meowy from chainsaw man. they are so badass.</p>
+			</div>
+
+			<button onclick="showWin('oyasumi')" class="container"><img src="thumb/oyasumi.png"></button>
+			<div id="oyasumi" class="window">
+				<img src="!g/drawings/oyasumi.jpg" width="100%">
+				<p>based off siinamota's oyasumi</p>
+				<p>YOUTUBE HERE</p>
+			</div>
+
+			<button onclick="showWin('mugung')" class="container"><img src="thumb/mugung-1.png"></button>
+			<div id="mugung" class="window">
+				<img src="!g/drawings/mugung%201.jpg" width="100%">
+				<p>based off a pic from photographer mugung.</p>
+			</div>
+
+			<button onclick="showWin('hurricane')" class="container"><img src="thumb/hurricane.png"></button>
+			<div id="hurricane" class="window">
+				<img src="!g/drawings/hurricane.jpg" width="100%">
+				<p>finished sometime around october 2017</p>
+				<p>did this over the course of two weeks after Puerto Rico got hit with the cat5 hurricane maria during september 2017. this was the result of being without electricity for about 2 weeks. as you can imagine i didn't have much to do everyday so i doodled on this page til there was no space left. or eventually got tired of working on it. actually i think the pens i was using ran out of ink too.</p>
+				<p>honestly i have so much to talk about with this horrible experience but that's for another day.</p>
+			</div>
+
+			<button onclick="showWin('iffound')" class="container"><img src="thumb/iffound.png"></button>
+			<div id="iffound" class="window">
+				<img src="!g/drawings/iffound.jpg" width="100%">
+				<p>done sometime around 2021 for my art journal</p>
+			</div>
+
+			<button onclick="showWin('onenonly')" class="container"><img src="thumb/oneandonly.png"></button>
+			<div id="onenonly" class="window">
+				<img src="!g/drawings/oneandonly.jpg" width="100%">
+				<p>going through a breakup during march 2020 and this music video healed me. i had a few plans for this projects but it basically came out how i wanted :) this one is one of my favorite pieces.</p>
+			</div>
+
+			<button onclick="showWin('sepiarecord')" class="container"><img src="thumb/sepiarecord.png"></button>
+			<div id="sepiarecord" class="window">
+				<img src="!g/drawings/sepiarecord.jpg" width="100%">
+				<p>??.feb.22 - had a lot of fun with this one using my watercolor brushes. thank you siinamota for my life.</p>
+			</div>
+
+			<button onclick="showWin('hld')" class="container"><img src="thumb/drifter.png"></button>
+			<div id="hld" class="window">
+				<img src="!g/drawings/hyperlightdrifter6thanni.jpg" width="100%">
+				<p>for the 6th anniversary of <i>hyper light drifter</i>! one of my fav video games.</p>
+			</div>
+
+			<button onclick="showWin('skrun')" class="container"><img src="thumb/skrunklis.png"></button>
+			<div id="skrun" class="window">
+				<img src="!g/drawings/inscryption%20doodles.jpg" width="100%">
+				<p>skrunklies from inscryption</p>
+			</div>
+
+			<button onclick="showWin('casio-2')" class="container"><img src="thumb/casio-2.png"></button>
+			<div id="casio-2" class="window">
+				<img src="!g/drawings/kasio.jpg" width="100%">
+				<p>another casio...... this one was fun.</p>
+			</div>
+
+			<button onclick="showWin('san')" class="container"><img src="thumb/san.png"></button>
+			<div id="san" class="window">
+				<img src="!g/drawings/sannn.jpg" width="100%">
+				<p>a drawing of ateez' san. i love this album photoshoot.</p>
+			</div>
+
+			<button onclick="showWin('tlp')" class="container"><img src="thumb/thelittleprince.png"></button>
+			<div id="tlp" class="window">
+				<img src="!g/drawings/thelittleprince.jpg" width="100%">
+				<p>the little prince and the fox. my meow meows.</p>
+			</div>
+
+			<button onclick="showWin('tlp-2')" class="container"><img src="thumb/tlpjr.png"></button>
+			<div id="tlp-2" class="window">
+				<img src="!g/drawings/tlp-2.jpg" width="100%">
+				<p>an oldie. guys i love the little prince.</p>
+			</div>
+		</div>
+
+
+		<!--
+		<div id="collage">
+			<h2>collages</h2>
+		</div>
+-->
+
+		<div id="misc">
+			<h2>misc</h2>
+			<button onclick="showWin('cherrybooklet')" class="container"><img src="thumb/depression-cherry.png"></button>
+			<div id="cherrybooklet" class="window">
+				<img src="!g/misc/depression-cherry-booklet/1.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+				<p>one day i was bored out of my ass so i make <i>depression cherry</i> a custom made booklet so i could read along the lyrics as the CD plays :) this album has a booklet but it only has pictures.</p>
+				<p>obviously inspired by the original booklet, and the whole red and rose theming this thing has going on. none of the pictures i used in the making of this are mine and i basically got them from google... all i did was put it all together.</p>
+				<p>you can download the .docx file and print it yourself <a title="dropbox link" href="https://www.dropbox.com/scl/fo/oihls0fyekyp0t1aj2q8g/h?rlkey=3w3xemsxkkndkflxn1bt1wl59&dl=0:" target="_blank" class="outlink">here!</a></p>
+				<p>things used: <a href="https://youtu.be/qEODnWRyfcU" target="_blank" class="outlink">this youtube video</a> on how to make an album booklet, <a href="https://www.photopea.com/" target="_blank">photopea</a>, and ms word for printing and formatting.</p>
+				<img src="!g/misc/depression-cherry-booklet/2.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+				<img src="!g/misc/depression-cherry-booklet/3.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+				<img src="!g/misc/depression-cherry-booklet/4.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+				<img src="!g/misc/depression-cherry-booklet/5.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+				<img src="!g/misc/depression-cherry-booklet/6.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
+			</div>
+
+		</div>
+		<footer>
+			<b>last updated on 03.jul.24</b>
+			<br>
+			<b>credit:</b> background from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, <a href="/notebook/links/fonts.html">fonts</a> used: gaegu
+			<br>
+			<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">map</a>
+		</footer>
+	</main>
+
+<div id="pagedoll"><img src="/!g/deco/stationaty-1.gif"></div>
+	<script src="script.js"></script>
 </body>
 
 </html>
