forgot to add something

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -186,13 +186,13 @@
 		<footer>
 			<b>last updated on 03.jul.24</b>
 			<br>
-			<b>credit:</b> background from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, <a href="/notebook/links/fonts.html">fonts</a> used: gaegu
+			<b>credit:</b> background from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, <a href="/notebook/links/fonts.html">fonts</a> used: gaegu, bangalore
 			<br>
 			<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">map</a>
 		</footer>
 	</main>
 
-<div id="pagedoll"><img src="/!g/deco/stationaty-1.gif"></div>
+	<div id="pagedoll"><img src="/!g/deco/stationaty-1.gif"></div>
 	<script src="script.js"></script>
 </body>
 
