updating minor things

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -79,7 +79,7 @@
 
 			<button onclick="showWin('power')" class="container"><img src="thumb/pahwah.png"></button>
 			<div id="power" class="window">
-				<img src="!g/drawings/pahwah.png" width="100%">
+				<img src="!g/drawings/pahwah.jpg" width="100%">
 				<p>some doodles of power and meowy from chainsaw man. they are so badass.</p>
 			</div>
 
