--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -198,6 +198,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page</li>
 			<li>02.jul.24: added entries to <a href="/photobook">photobook</a></li>
 			<li>25.jun.24: journal log: <a href="/journal">last day</a></li>
 			<li>21.jun.24: updated <a href="/scrapbook/2024/index.html#jun">june</a> scrapbook + added <i>kaiba</i> to <a href="/tv">TV</a> log</li>
@@ -351,7 +352,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-page" class="box">
 			<h2>featured page</h2>
-			<a title="plushies collection... take me there!" href="/collection/plushies/index.html"><img src="!g/plushies.jpg" alt="featured page"></a>
+			<a title="my arts n craft... take me there!" href="/art"><img src="!g/art.jpg" alt="featured page"></a>
 		</div>
 
 		<div id="button" class="box">
