--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -37,7 +37,7 @@
 			<li>writings</li>
 			<ul>
 				↳ <a href="/journal/index.html" target="_parent">journal</a>
-				<br> ↳ <a href="/microblog/index.html" target="_parent">microblog</a> <img src="/!g/pix/new1.gif">
+				<br> ↳ <a href="/microblog/index.html" target="_parent">microblog</a>
 				<br> ↳ <a href="/blog/index.html" target="_parent">blog</a>
 			</ul>
 			<li><a href="/music/index.html" target="_parent">music</a></li>
@@ -67,15 +67,15 @@
 			<li><b>media logs</b></li>
 			<ul>
 				↳ <a href="/vgs" target="_parent">video games</a>
-				<br> ↳ <a href="/tv" target="_parent">TV</a> <img src="/!g/pix/new1.gif">
-				<br> ↳ <a href="/books" target="_parent">books</a> <img src="/!g/pix/new1.gif"> <img src="/!g/pix/caution1.gif">
+				<br> ↳ <a href="/tv" target="_parent">TV</a>
+				<br> ↳ <a href="/books" target="_parent">books</a> <img src="/!g/pix/caution1.gif">
 				<br> ↳ <a href="/music/listening-log" target="_parent">music</a>
 			</ul>
-			<li><a title="missing CSS" href="/art" target="_parent">art</a> <img src="/!g/pix/caution1.gif"></li>
+			<li><a title="missing CSS" href="/art" target="_parent">art</a> <img src="/!g/pix/updated1.gif"></li>
 			<li><a href="/photobook" target="_parent">photobook</a></li>
 			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
 			<li><a href="/projects">web projects</a></li>
-			<li><a href="/guestbook/index.html" target="_parent">guestbook</a> <img src="/!g/pix/new1.gif"></li>
+			<li><a href="/guestbook/index.html" target="_parent">guestbook</a></li>
 			<ul>
 				<li><a href="/guestbook/archive.html">archived 123guestbook</a></li>
 			</ul>
