new listening log for daoko's slash and burn

--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -25,8 +25,9 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>thoughts n highlights of stuff i listen to!</p>
+		<p>thoughts n highlights of stuff i listen to! <small>i have a life now so expect less logs in here :(</small></p>
 		<h3>pages</h3>
+		<a href="2024/summer.html" target="_parent">summer 2024</a>
 		<a href="2024/spring.html" target="_parent">spring 2024</a>
 		<a href="2024/winter.html" target="_parent">winter 2024</a>
 		<a href="2023/12.html" target="_parent">december 2023</a>
