--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -126,7 +126,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
-			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts <img src="!g/pix/caution1.gif" alt=""></a>
+			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts <img src="!g/pix/new1.gif" alt=""></a>
 			<h3>media logs</h3>
 			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
@@ -198,7 +198,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page</li>
+			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page + new <a title="daoko's slash n burn" href="/music/listening-log/2024/summer.html#1">listening log</a></li>
 			<li>02.jul.24: added entries to <a href="/photobook">photobook</a></li>
 			<li>25.jun.24: journal log: <a href="/journal">last day</a></li>
 			<li>21.jun.24: updated <a href="/scrapbook/2024/index.html#jun">june</a> scrapbook + added <i>kaiba</i> to <a href="/tv">TV</a> log</li>
