--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,9 +30,9 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
+				<b>03.jul.24</b> - summer listening log now live!
 				<b>14.jun.24</b> - updated featured section! /
-				<b>12.jun.24</b> - added new CDs in collection /
-				<b>07.jun.24</b> - new listening log!
+				<b>12.jun.24</b> - added new CDs in collection
 			</marquee>
 		</div>
 
@@ -83,8 +83,8 @@
 
 		<div id="log" class="box">
 			<h4>latest log...</h4>
-			<iframe src="listening-log/2024/spring.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
-			<a title="click to open listening log and continue reading!" href="listening-log/2024/spring.html" target="_blank"></a>
+			<iframe src="listening-log/2024/summer.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
+			<a title="click to open listening log and continue reading!" href="listening-log/2024/summer.html" target="_blank"></a>
 		</div>
 
 		<div id="featured" class="box">
