--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -90,7 +90,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 <body>
 
 	<script>
-		NekoType = "ghost"
+		NekoType = "black"
 
 	</script>
 	<h1 id=nl>
@@ -122,7 +122,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
 			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog </a>
-			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
+			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog <img src="/!g/pix/updated1.gif" alt=""></a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
@@ -198,6 +198,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>04.jul.24: new blog post <a href="/blog/2024/grandma/index.html">remembering my grandma</a></li>
 			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page + new <a title="daoko's slash n burn" href="/music/listening-log/2024/summer.html#1">listening log</a></li>
 			<li>02.jul.24: added entries to <a href="/photobook">photobook</a></li>
 			<li>25.jun.24: journal log: <a href="/journal">last day</a></li>
