changes to art CSS

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -3,12 +3,17 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>art</title>
+	<title>arts n crafts</title>
 	<meta name="description" content="doqmeat's art">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="/!g/pix/catdraw.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
+	<!-- tooltip shit -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
+	<!--  end of tooltip shit -->
 </head>
 
 <body>
@@ -186,13 +191,15 @@
 		<footer>
 			<b>last updated on 03.jul.24</b>
 			<br>
-			<b>credit:</b> background from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, <a href="/notebook/links/fonts.html">fonts</a> used: gaegu, bangalore
+			<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: gaegu, bangalore, pencil case pixel from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>
 			<br>
 			<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">map</a>
 		</footer>
 	</main>
 
-	<div id="pagedoll"><img src="/!g/deco/stationaty-1.gif"></div>
+	<div id="home"><a href="/"><img title="go back home" src="/!g/deco/pencilbag2b.gif" alt="go back home"></a></div>
+
+	<div id="pagedoll"><a href="#" title="go to the top!"><img src="/!g/deco/stationaty-1.gif"></a></div>
 	<script src="script.js"></script>
 </body>
 
