--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -80,11 +80,13 @@
 		<li><a href="https://code.visualstudio.com/" target="_blank">visual studio code</a> - offline editor, supported by microsoft, it has a TON of extensions and other options in comparison to brackets.</li>
 
 		<h3 id="hosting">hosting</h3>
-		<li><a href="https://neocities.org/" target="_blank">neocities</a> - 1gb storage. has a social feed</li>
-		<li><a href="https://ichi.city/" target="_blank">ichi.city</a> - host a small site with only 10mb of space. have fun!</li>
-		<li><a href="https://nekoweb.org" target="_blank">nekoweb</a> - 500mb storage. super cute interface, also features social aspects similar to neocities!</li>
-		<li><a href="https://pages.github.com/" target="_blank">github pages</a> - make a repository named (YOURUSERNAME).github.io and boom. hosted directly from your repository. you can also have a custom domain for free. 1gb storage</li>
-		<li><a href="https://www.cloudflare.com/developer-platform/pages/" target="_blank">cloudflare pages</a> - free hosting. add a custom domain. files have a limit of 25mb each. your website can host up to 20,000 files.</li>
+		<p>the descriptions are all from their free plans.</p>
+		<li><a href="https://neocities.org/" target="_blank">neocities</a> - 1gb storage. has a social feed.</li>
+		<li><a href="https://ichi.city/" target="_blank">ichi.city</a> - 10mb storage. host a small site! have fun!</li>
+		<li><a href="https://nekoweb.org" target="_blank">nekoweb</a> - 500mb storage. has a social interface similar to neocities!</li>
+		<li><a href="https://hosting.lexiqqq.com" target="_blank">lexiqqq's hosting</a> - 500mb storage. also has a social interface similar to neocities.</li>
+		<li><a href="https://pages.github.com/" target="_blank">github</a> - 1gb storage. make a repository named (YOURUSERNAME).github.io or use any other repository and enable github pages. add a custom domain.</li>
+		<li><a href="https://www.cloudflare.com/developer-platform/pages/" target="_blank">cloudflare pages</a> - up to 20,000 files of storage. add a custom domain. files have a limit of 25mb each.</li>
 
 		<h3>misc</h3>
 		<li><a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a> - update neocities using <b>github</b> actions. this is i use to update my website's code directly from my PC without having to open neocities built-in coder. this is such a time-saver and i really recommend it to everyone who updates their site a lot! here's a <a href="https://github.com/burned-salmon/deploy-to-neocities-template">tutorial</a> by MissMoss on how to install it.</li>
