--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -33,6 +33,11 @@
 			<p><b></b> </p>
 		</article>
 -->
+
+<article>
+			<p><b>04.jul.24 - 2am</b> possible rework of my journal page might be incoming.... kinda want a change of scenery!</p>
+		</article>
+
 			<article>
 				<p><b>02.jul.24 - 4pm</b> this is as good as life gets <button onclick="showPic('!g/240702-kaiba-room.png', 'picture of my room with kaiba playing in the background' , 'watching kaiba in my cozy room')">240702-kaiba-room.png</button></p>
 			</article>
