--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,7 +35,7 @@
 -->
 
 <article>
-			<p><b>04.jul.24 - 2am</b> possible rework of my journal page might be incoming.... kinda want a change of scenery!</p>
+			<p><b>05.jul.24 - 2am</b> possible rework of my journal page might be incoming.... kinda want a change of scenery! also, i will be watching <i>maxxxine</i> later today!!! very excited to see how this trilogy is going to conclude...</p>
 		</article>
 
 			<article>
