added to toybox

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -220,6 +220,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<img title="idk where this one is from but if anyone knows, let me know!" src="/!g/deco/gemini.gif">
+				<a href="https://mooncandy.toys/" target="_blank"><img src="!g/adopted/sticky.png"></a>
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/galaxycat.png"></a>
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/teeacup.png"></a>
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/bicat.png"></a>
