--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -24,19 +24,28 @@
 
 		<!--column 1-->
 		<div class="column">
+			<video controls>
+				<source src="!g/the-blinker.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+			<img src="!g/buenos-dias.jpg">
+			<img src="!g/cathug.jpg">
+			<img src="!g/catmuah.jpg">
+			<img src="!g/3for1.jpg">
+			<img src="!g/tiene-sueno.jpg">
 			<img src="!g/cat-ad.jpg">
 			<img src="!g/binkly.jpg">
 			<img src="!g/2cats.jpg" alt="2 cats hugging">
 			<img src="!g/grindneverstarts.jpg" alt="the grind never starts i'm sleeping">
 			<img src="!g/stupid-tiger.jpg" alt="stupid tiger">
-			<img src="!g/baby-cat.jpeg" alt="cat with a bib">
-			<img src="!g/ballin.jpeg" alt="cat balling">
-			<img src="!g/bigoleyes.jpeg">
-			<img src="!g/bleh.jpeg">
+			<img src="!g/baby-cat.jpg" alt="cat with a bib">
+			<img src="!g/ballin.jpg" alt="cat balling">
+			<img src="!g/bigoleyes.jpg">
+			<img src="!g/bleh.jpg">
 			<img src="!g/cryingcat.jpg">
 			<img src="!g/dontletthecopsinorthecatsout.jpg">
 			<img src="!g/eepycats.jpg">
-			<img src="!g/nyaaa.jpeg">
+			<img src="!g/nyaaa.jpg">
 			<img src="!g/orange-eating-stupid.gif">
 			<img src="!g/paldo-1.jpg">
 			<img src="!g/paldo.jpg">
@@ -44,32 +53,38 @@
 			<img src="!g/puter-cat.jpg">
 			<img src="!g/silly.jpg">
 			<img src="!g/silly2.jpg">
-			<a title="fatfatmillycat twt acc" href="https://twitter.com/fatfatmillycat" target="_blank"><img src="!g/silly-milly.jpeg"></a>
+			<a title="fatfatmillycat twt acc" href="https://twitter.com/fatfatmillycat" target="_blank"><img src="!g/silly-milly.jpg"></a>
 			<img src="!g/skrunkly.jpg">
 			<img src="!g/sleepaddict.jpg">
-			<img src="!g/fake-halulu.jpeg">
+			<img src="!g/fake-halulu.jpg">
 		</div>
 
 		<!--column 2-->
 		<div class="column">
+			<img src="!g/explode.jpg">
+			<img src="!g/hesallin.jpg">
+			<img src="!g/look-inside.jpg">
+			<img src="!g/mememe.jpg">
 			<img src="!g/cell.jpg">
 			<img src="!g/fart.jpg">
 			<img src="/!g/gif/gato-splash.gif" alt="a cat getting water splashed on him">
 			<img src="!g/mau.jpg" alt="the tower of babel if it was awesome">
-			<img src="!g/buenosdias.jpeg" alt="buenos dias">
+			<img src="!g/buenosdias.jpg" alt="buenos dias">
 			<img src="!g/cat-angel.gif">
 			<img src="!g/freddy-jumpscare.gif" alt="mr shock and freddy">
 			<img src="!g/funfact.jpg">
 			<img src="!g/gasp.jpg">
 			<img src="!g/gatoempanada.jpg">
-			<img src="!g/glungus.png">
-			<img src="!g/gulpcat.gif">
+			<img src="!g/glungus.jpg">
+			<video controls>
+				<source src="!g/gulpcat.mp4">
+			</video>
 			<a title="fishtopher and friends twt acc" href="https://twitter.com/mrfishtopher" target="_blank"><img src="!g/tobelovedistobechanged.jpg"></a>
-			<img src="!g/thelooker.jpeg">
-			<img src="!g/sleeptwo.jpeg">
+			<img src="!g/thelooker.jpg">
+			<img src="!g/sleeptwo.jpg">
 			<img src="!g/surprised.jpg">
 			<img src="!g/wellwouldu.jpg">
-			<img src="!g/whoops.jpeg">
+			<img src="!g/whoops.jpg">
 			<img src="!g/computercat.jpg">
 			<img src="!g/catbombnya.jpg">
 			<img src="!g/catdj.jpg">
@@ -79,13 +94,18 @@
 
 		<!--column 3-->
 		<div class="column">
+			<img src="!g/paldo-smoking.jpg">
+			<img src="!g/panko.jpg">
+			<img src="!g/sideeye.jpg">
+			<img src="!g/sillycats.jpg">
+			<img src="!g/this-freak.jpg">
 			<img src="!g/tiger.jpg">
 			<img src="!g/apple-car.jpg">
 			<img src="!g/smirk.jpg">
 			<img src="!g/soggy-cat.jpg">
 			<img src="!g/blub-meow.jpg" alt="fish cat">
 			<img src="!g/thisgoofyassguy.jpg">
-			<img src="!g/wait-im-jolly.jpeg">
+			<img src="!g/wait-im-jolly.jpg">
 			<img src="!g/YOUVEBEENJESTERED.jpg">
 			<img src="!g/hessokind.jpg">
 			<img src="!g/hessonervious.jpg">
@@ -96,8 +116,8 @@
 			<img src="!g/lalalalala.jpg">
 			<img src="!g/needtochill.jpg">
 			<img src="!g/neverstop.jpg">
-			<img src="!g/no-hace-nada.jpeg">
-			<img src="!g/not-typing.jpeg">
+			<img src="!g/no-hace-nada.jpg">
+			<img src="!g/not-typing.jpg">
 			<img src="!g/cattail.gif">
 			<img src="!g/computer-cats.jpg">
 			<img src="!g/continue-um.jpg">
@@ -114,7 +134,7 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 09.may.24</b>
+		<b>last updated: 05.jul.24</b>
 		<br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw
 
