--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -6,7 +6,7 @@
 	<!-- 
 coded with love by des!
 
-v3 of journal started on 25.feb.24./ finished on 01.mar.24
+v3 of journal started on 05.jul.24
  -->
 
 	<meta charset="UTF-8">
@@ -17,131 +17,87 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="v3-index.css" rel="stylesheet" type="text/css" media="all">
+	<link href="v4-index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<script src="https://melonking.net/scripts/frame-link.js"></script>
+	<script>
+		titlePrefix = "journal - ";
+
+	</script>
 </head>
 
 <body>
+	<div id="wrapper">
 
-	<div id="notepad">
-		<div id="header"></div>
+		<aside>
+			<div id="desc">
+				<img align="left" src="!g/welcome.gif" width="50%" style="margin:10px;">
+				<h3>welcome to des' journal logs!</h3>
+				<p>in here i will be talking about my life, site stuff, and other misc things. logs are from newest to oldest. updated every month <small>if i write something!</small></p>
+			</div>
 
-		<nav>
-			<h1>des' journal</h1>
-			<img src="/!g/deco/diary.gif" align="left">
-			<p>on this little notepad i write about my life, site stuff, and any other misc things.</p>
-			<details open>
-				<summary>2024</summary>
-				<a href="2024/06.html" target="iframe_a">june</a>
-				<a href="2024/05.html" target="iframe_a">may</a>
-				<a href="2024/04.html" target="iframe_a">april</a>
-				<a href="2024/03.html" target="iframe_a">march</a>
-				<a href="2024/02.html" target="iframe_a">february</a>
-				<a href="2024/01.html" target="iframe_a">january</a>
-			</details>
-			<details>
-				<summary>2023</summary>
-				<a href="2023/12.html" target="iframe_a">december</a>
-				<a href="2023/11.html" target="iframe_a">november</a>
-				<a href="2023/10.html" target="iframe_a">october</a>
-				<a href="2023/09.html" target="iframe_a">september</a>
-				<a href="2023/08.html" target="iframe_a">august</a>
-				<a href="2023/07.html" target="iframe_a">july</a>
-				<a href="2023/06.html" target="iframe_a">june</a>
-				<a href="2023/05.html" target="iframe_a">may</a>
-				<a href="2023/04.html" target="iframe_a">april</a>
-			</details>
+			<div id="calendar">
+				<h3>calendar</h3>
+				<iframe name="ca" src="2024/calendar.html" scrolling="no"></iframe>
+			</div>
 
-			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
+			<div id="nav">
+				<img align="right" src="!g/flower-b.gif">
+				<h3>logs navigation</h3>
+				<details>
+					<summary>2024</summary>
+					<a href="2024/07.html">july</a>
+					<a href="2024/06.html" target="log">june</a>
+					<a href="2024/05.html" target="log">may</a>
+					<a href="2024/04.html" target="log">april</a>
+					<a href="2024/03.html" target="log">march</a>
+					<a href="2024/02.html" target="log">february</a>
+					<a href="2024/01.html" target="log">january</a>
+				</details>
+				<details>
+					<summary>2023</summary>
+					<a href="2023/12.html" target="log">december</a>
+					<a href="2023/11.html" target="log">november</a>
+					<a href="2023/10.html" target="log">october</a>
+					<a href="2023/09.html" target="log">september</a>
+					<a href="2023/08.html" target="log">august</a>
+					<a href="2023/07.html" target="log">july</a>
+					<a href="2023/06.html" target="log">june</a>
+					<a href="2023/05.html" target="log">may</a>
+					<a href="2023/04.html" target="log">april</a>
+				</details>
+			</div>
 
-			<p>links: <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a> / <a href="credit.html" target="iframe_a">credit</a></p>
+			<div id="quote">
+				<p>a chocolate sepia record that is important to me and no one else <br><b> - <a href="https://vocaloidlyrics.fandom.com/wiki/999/Powapowa-P" title="translation credit!">999</a> (siinamota)</b>
+				</p>
+			</div>
+
+			<div id="pic">
+				<h3>piclog</h3>
+				<a title="piclog acc, will open on a new tab!" href="https://piclog.blue/profile.php?id=51" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
+			</div>
 
 
-		</nav>
+		</aside>
 
-		<main>
-			<iframe id="mainframe" src="2024/06.html" name="iframe_a" height="100%" width="100%"></iframe>
-		</main>
+		<iframe id="mainframe" name="log" src="2024/07.html"></iframe>
+
+		<footer>
+			<p><img src="/!g/pix/butterfly5.gif"> running on version 3 since 06.jul.24 <img src="/!g/pix/butterfly5.gif"></p>
+			<p><a href="#">top</a> - <a href="/">home</a> - <a title="food log!" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink">moku.blog</a> - <a href="/microblog">microblog</a> - <a href="/sitemap">sitemap</a></p>
+			<p><b>credit:</b> pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, bg n deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
+		</footer>
+
 	</div>
 
-	<div id="tag">
-		<a data-toggle="tooltip" title="go back home" href="/">home</a>
-		<img src="/!g/pix/lc01-icon-bookmark.gif" width="23px">
-	</div>
+	<div id="sticker"><a href="#" title="scroll to the top!"><img src="!g/pic.gif"></a></div>
 
-	<aside id="memo1" class="memo draggable">
-		<div class="innermemo">
-			<h2>status.cafe</h2>
-			<!-- start sw-rss-feed code -->
-			<script type="text/javascript" src="status-cafe-feed.js"></script>
-			<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
-			<span style="font-size:small;">feed powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
-		</div>
-	</aside>
-
-	<aside id="memo2" class="memo draggable">
-		<div class="innermemo">
-			<iframe src="https://calendar.sakura.ne.jp/blog_cal.html" class="calendar"></iframe>
-			<div id="side">
-				a chocolate sepia record that is important to me and no one else <br> <b> - <a href="https://vocaloidlyrics.fandom.com/wiki/999/Powapowa-P" title="translation credit!">999</a> (siinamota)</b>
-			</div>
-		</div>
-	</aside>
-
-	<aside id="memo3" class="memo draggable">
-		<div class="innermemo">
-			<div id="musicplayer">
-				<div>
-					<marquee scrollamount="6" class="songtitle"></marquee>
-				</div>
-				<table class="controls">
-					<tr>
-						<td>
-							<center>
-								<div class="prev-track" onclick="prevTrack()"><i class="fas fa-backward"></i></div>
-							</center>
-						</td>
-						<td>
-							<center>
-								<div class="playpause-track" onclick="playpauseTrack()"><i class="fas fa-play"></i></div>
-							</center>
-						</td>
-						<td>
-							<center>
-								<div class="next-track" onclick="nextTrack()"><i class="fas fa-forward"></i></div>
-							</center>
-						</td>
-					</tr>
-				</table>
-				<div class="seeking">
-					<div class="current-time">00:00</div><input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()">
-					<div class="total-duration">0:00</div>
-				</div><audio id="music" src=""></audio>
-			</div>
-		</div>
-	</aside>
-
-	<aside id="memo4" class="memo draggable">
-		<div class="innermemo">
-			<h2><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h2>
-			<a title="piclog profile will open on iframe!" href="https://piclog.blue/profile.php?id=51" target="iframe_a"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
-		</div>
-	</aside>
-
-	<aside id="pen"><img src="!g/tulip.png" width="100%"></aside>
-
-	<script>
-		var audio = document.getElementById("music");
-		audio.volume = 0.8;
-
-	</script>
-	<script src="music-player.js"></script>
-	<script src="/!f/draggable.js"></script>
+	<div id="home"><a title="go back home?" href="/"><img src="!g/hanging.gif"></a></div>
 </body>
 
 </html>
