--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -120,7 +120,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>personal</h3>
 			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
-			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
+			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal <img src="/!g/pix/new1.gif"></a>
 			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog </a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog <img src="/!g/pix/updated1.gif" alt=""></a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
@@ -130,9 +130,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>media logs</h3>
 			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
-			<a href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows <img src="!g/pix/updated1.gif" alt=""></a>
+			<a href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows</a>
 			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt=""></a>
-			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movies</a>
+			<a href="/october-movies"><img src="/!g/pixgit/gaikotsu2.gif"> october movies</a>
 			<h3>misc</h3>
 			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
@@ -198,6 +198,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>06.jul.24: <a href="/journal/">journal</a> page has a new layout + new log :]</li>
 			<li>04.jul.24: new blog post <a href="/blog/2024/grandma/index.html">remembering my grandma</a></li>
 			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page + new <a title="daoko's slash n burn" href="/music/listening-log/2024/summer.html#1">listening log</a></li>
 			<li>02.jul.24: added entries to <a href="/photobook">photobook</a></li>
