--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -42,7 +42,7 @@ v3 of journal started on 05.jul.24
 
 			<div id="calendar">
 				<h3>calendar</h3>
-				<iframe name="ca" src="2024/calendar.html" scrolling="no"></iframe>
+				<!--				<iframe name="ca" src="2024/calendar.html" scrolling="no"></iframe>-->
 			</div>
 
 			<div id="nav">
