--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -50,7 +50,7 @@ v3 of journal started on 05.jul.24
 				<h3>logs navigation</h3>
 				<details>
 					<summary>2024</summary>
-					<a href="2024/07.html">july</a>
+					<a href="2024/07.html" target="log">july</a>
 					<a href="2024/06.html" target="log">june</a>
 					<a href="2024/05.html" target="log">may</a>
 					<a href="2024/04.html" target="log">april</a>
@@ -81,8 +81,6 @@ v3 of journal started on 05.jul.24
 				<h3>piclog</h3>
 				<a title="piclog acc, will open on a new tab!" href="https://piclog.blue/profile.php?id=51" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
 			</div>
-
-
 		</aside>
 
 		<iframe id="mainframe" name="log" src="2024/07.html"></iframe>
