--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -198,6 +198,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<a title="RSS feed" href="rss.xml"><img src="!g/web/materials/rss.png" alt="RSS button for xml file"></a>
 			<li>06.jul.24: <a href="/journal/">journal</a> page has a new layout + new log :]</li>
 			<li>04.jul.24: new blog post <a href="/blog/2024/grandma/index.html">remembering my grandma</a></li>
 			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page + new <a title="daoko's slash n burn" href="/music/listening-log/2024/summer.html#1">listening log</a></li>
