rss feed in homepage now

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -132,7 +132,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
 			<a href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows</a>
 			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt=""></a>
-			<a href="/october-movies"><img src="/!g/pixgit/gaikotsu2.gif"> october movies</a>
+			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movies</a>
 			<h3>misc</h3>
 			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
@@ -197,21 +197,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="updates" class="box">
-			<h2>updates</h2>
-			<a title="RSS feed" href="rss.xml"><img src="!g/web/materials/rss.png" alt="RSS button for xml file"></a>
-			<li>06.jul.24: <a href="/journal/">journal</a> page has a new layout + new log :]</li>
-			<li>04.jul.24: new blog post <a href="/blog/2024/grandma/index.html">remembering my grandma</a></li>
-			<li>03.jul.24: FINALLY re-did my <a href="/art">art</a> page + new <a title="daoko's slash n burn" href="/music/listening-log/2024/summer.html#1">listening log</a></li>
-			<li>02.jul.24: added entries to <a href="/photobook">photobook</a></li>
-			<li>25.jun.24: journal log: <a href="/journal">last day</a></li>
-			<li>21.jun.24: updated <a href="/scrapbook/2024/index.html#jun">june</a> scrapbook + added <i>kaiba</i> to <a href="/tv">TV</a> log</li>
-			<li>16.jun.24: journal log: <a href="/journal">guilt</a></li>
-			<li>12.jun.24: added new <a title="alterour setsuna pop + kokegane no uta" href="/music/cds">CD</a> to collection</li>
-			<li>09.jun.24: <a title="added sonic rush" href="/vgs">gaming log</a> updated</li>
-			<li>07.jun.24: new <a href="/collection/mail-stamps/index.html">mail stamp</a> in collection + <a href="/music/listening-log/2024/spring#5">dall</a> listening log</li>
-			<li>05.jun.24: added <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a> + new pics <a href="/photobook">photobook</a></li>
-			<li>04.jun.24: journal log: <a href="/journal">visiting AZ + 3DS</a></li>
-			<li><a href="notebook/archive/updates.html">past updates</a></li>
+			<h2><a title="add my RSS to your feed!" href="rss.xml"><img class="rss" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates</h2>
+			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.com%2Frss.xml&limit=10&showtitle=false&type=js"></script>
+
+			<a href="notebook/archive/updates.html">past updates</a>
 		</div>
 
 		<div id="featured-cat" class="box">
