--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -197,7 +197,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="updates" class="box">
-			<h2><a title="add my RSS to your feed!" href="rss.xml"><img class="rss" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates</h2>
+			<h2><a title="add my RSS to your feed!" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates</h2>
 			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.com%2Frss.xml&limit=10&showtitle=false&type=js"></script>
 
 			<a href="notebook/archive/updates.html">past updates</a>
