--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -22,7 +22,7 @@
 
 		<p><b>credit:</b> body bg from <a href="https://unsplash.com/@quinoal?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Quino Al</a> on <a href="https://unsplash.com/photos/body-of-water-and-seashore-JFeOy62yjXk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="https://archive.org/details/WindowsXPExtractedIcons" target="_blank">windows XP icons</a></p>
 
-<p class="show"><a href="/">go back home?</a></p>
+		<p class="show"><a href="/">go back home?</a></p>
 	</div>
 
 	<main>
@@ -36,9 +36,13 @@
 		</article>
 -->
 
-<article>
-			<p><b>05.jul.24 - 2am</b> possible rework of my journal page might be incoming.... kinda want a change of scenery! also, i will be watching <i>maxxxine</i> later today!!! very excited to see how this trilogy is going to conclude...</p>
-		</article>
+			<article>
+				<p><b>07.jul.24 - 2am</b> wow adding a RSS feed for my website's updates was so easy... wish i had done this sooner LOL. also <i>maxxxine</i> was kinda just okay. awks</p>
+			</article>
+
+			<article>
+				<p><b>05.jul.24 - 2am</b> possible rework of my journal page might be incoming.... kinda want a change of scenery! also, i will be watching <i>maxxxine</i> later today!!! very excited to see how this trilogy is going to conclude...</p>
+			</article>
 
 			<article>
 				<p><b>02.jul.24 - 4pm</b> this is as good as life gets <button onclick="showPic('!g/240702-kaiba-room.png', 'picture of my room with kaiba playing in the background' , 'watching kaiba in my cozy room')">240702-kaiba-room.png</button></p>
