--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,6 +35,9 @@
 			<p><b></b> </p>
 		</article>
 -->
+<article>
+			<p><b>07.jul.24 - 4am</b> caught up with csm... fujimoto you are going to hell 😂</p>
+		</article>
 
 			<article>
 				<p><b>07.jul.24 - 2am</b> wow adding a RSS feed for my website's updates was so easy... wish i had done this sooner LOL. also <i>maxxxine</i> was kinda just okay. awks</p>
