--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -339,13 +339,17 @@
 		<hr>
 
 		<h2 id="fun">for fun</h2>
+
 		<li>my <a href="/sites/index.html" target="_parent">button wall</a> full of personal sites i like :3 check em out!</li>
 		<li><a href="https://cattherapy.neocities.org/" target="_blank">cat therapy</a> - shows you a random pic of a cat every 4 secs</li>
 		<li><a href="https://www.windows93.net" target="_blank">windows93.net</a> - an old windows mock-up</li>
-		<li><a href="https://32bit.cafe" target="_blank">32bit.cafe</a> - a community of website hobbyists and professionals / <a href="https://discuss.32bit.cafe/" target="_blank">discuss.32bit.cafe</a></li>
 		<li><a href="https://we-b.site/" target="_blank">(we)bsite</a> - make a letter to the internet</li>
 		<li><a href="https://www.webdesignmuseum.org/" target="_blank">web design museum</a> - shows you various web designs throughout time!</li>
 		<li><a href="https://wiby.me/" target="_blank">wiby.me</a> - search engine that only indexes sites without JS</li>
+
+		<h4>communities</h4>
+		<li><a href="https://discourse.32bit.cafe/" target="_blank">discourse.32bit.cafe</a> - a community of website hobbyists and professionals</li>
+		<li><a href="https://sundaysites.cafe/" target="_blank">sundaysites.cafe</a> - hosts sessions where you create an HTML page with a given topic and can interact with others afterwards!</li>
 
 		<h3 id="dragndrop">drag n drop web builders</h3>
 		<li><a href="https://build.mmm.page/" target="_blank">mmm.page</a> </li>
@@ -380,9 +384,6 @@
 		<hr>
 
 		<h3 id="join">things for your site to join!</h3>
-
-		<h4>communities</h4>
-		<li><a href="https://sundaysites.cafe/" target="_blank">sundaysites.cafe</a> - hosts sessions where you create an HTML page with a given topic and can interact with others afterwards!</li>
 
 		<h4>directories</h4>
 		<li><a href="https://pixelrevival.xyz" target="_blank">pixel revival</a> - archive of old pixel cliques</li>
