added rss to sitemap + minor fix to homepage css

--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -32,6 +32,7 @@
 			<h1>sitemap</h1>
 		</center>
 		<li><a href="/" target="_parent">homepage</a></li>
+		<li><a href="rss.xml" target="_parent">RSS feed</a></li>
 		<ul>
 			<li><a href="/about.html" target="_parent">about</a></li>
 			<li>writings</li>
