--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,10 @@
 		</article>
 -->
 <article>
+			<p><b>08.jul.24 - 12pm</b> wishing more sites i liked had an RSS feed i could subscribe to... i'm thinking of doing a tutorial of sorts</p>
+		</article>
+
+<article>
 			<p><b>07.jul.24 - 4am</b> caught up with csm... fujimoto you are going to hell 😂</p>
 		</article>
 
