added twin peaks to tv shows

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -34,12 +34,31 @@
 				</div>
 			</div>
 			-->
+
+			<div class="show">
+				<img src="!g/twin-peaks.png">
+				<div class="hov">
+					<div class="box">
+						<h3>twin peaks</h3>
+						<p>during april 2023 my boyfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
+						<p>i'm gonna get a tiny bit cheesy for a sec but then my boyfriend proceeded to explain to me the general plot of <i>twin peaks</i> and his face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
+						<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
+						<p>the main mystery of the show of <b>who killed laura palmer</b> was very interesting and i honestly did not seeing coming. there's a lot more to this show than just the murder mystery with its supernatural? themes and that made it very fun to watch.</p>
+						<p>my favorite character is probably cooper... yes.... he's just so much fun and funny and silly... he's also my bf's favorite character as well. but another contender is probably josephine for being the most <b>BEAUTIFUL</b> woman i've ever seen in my entire life. jesus.</p>
+
+						<p>we're currently like halfway through the 2nd season where (for some reason?) we have already established the killer of laura so now it just feels like we're following the main cast shenanigans with some filler stuff on the side and it just feels a little bit messy... but i'm still enjoying it nonetheless.</p>
+						<p><a href="https://www.filmaffinity.com/us/movieimage.php?imageId=892912807" target="_blank">poster credit</a></p>
+						<p class="status">s2 e13</p>
+					</div>
+				</div>
+			</div>
+
 			<div class="show">
 				<img src="!g/kaiba.png">
 				<div class="hov">
 					<div class="box">
 						<h3>kaiba</h3>
-						<p>i decided to watch this one day because i stumbled upon this gif one day <br> <img src="/!g/gif/kaiba.gif" width="100%"> <br> and i just found the art so so so beautiful!</p>
+						<p>i decided to watch this one day because i stumbled upon this gif one day <br> <img src="/!g/gif/kaiba.gif" width="90%" alt="gif of the intro of kaiba. has a watercolor style"> <br> and i just found the art so so so beautiful!</p>
 						<p>i was not very smart for watching this while going through a 4 day migraine because the plot can sometimes be a bit tricky to understand in the latter half. as of writing this, i've watched this anime at least 4 times and i must say that i do get it now.</p>
 						<p>the world of this is so cool and interesting. the main characters (kaiba and neyro) are also so lovely too. understanding their relationship and you learn more and more about them is just soooo. oh my god. i just love them so much. on my first watch i basically couldn't move as i was watching the credits roll on the last episode. it really stayed with me and i kept thinking about it (AND I STILL DO) for so long. it genuinely touched me.</p>
 						<p>i love the concept of being able to store memories in a chip and as long as you can get another body then you are basically immortal. but of course, there is way more than in the plot of this anime. also the art style is just so charming and cute given how dark this show gets.</p>
@@ -92,7 +111,7 @@
 		</div>
 		<details>
 			<summary>finished</summary>
-			<p>will put them up there as i work on this page!</p>
+			<p>will put them up if i want to :3 eventually</p>
 			<ul>
 				<li>smiling friends</li>
 				<li>mob psycho 100</li>
@@ -114,21 +133,24 @@
 				<li>andi mack</li>
 				<li>joe pera talks with you</li>
 				<li>clarence</li>
+				<li>the haunting of hill house</li>
+				<li>your honor</li>
+				<li>steven universe</li>
 			</ul>
 		</details>
 
 		<details>
 			<summary>want to watch</summary>
 			<ul>
-				<li>shows that <a title="masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
-				<li>ping pong the animation</li>
-				<li>tatami galaxy</li>
+				<li>shows that <a title="my masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
 				<li>sonny boy</li>
+				<li>the haunting of bly manor</li>
+				<li>serial experiments lain</li>
 			</ul>
 		</details>
 	</main>
 	<footer>
-		<p><b>last updated: 21.jun.24</b></p>
+		<p><b>last updated: 08.jul.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
